--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "dependencies": {
     "base-64": "^1.0.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "uuid": "^8.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
