--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "supertest": "^6.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
